discussion/kv_engine/171336/171336_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Fix NotifiableTask default sleep time

Snoozing a task for INT_MAX seconds is treated as "sleep forever"
by GlobalTask.

NotifiableTask provides an overridable `getSleepTime()`, which
defaulted to

 std::numeric_limits<size_t>::max()

This value is larger than INT_MAX, but is not treated as "sleep
forever".

Instead, it is used as a duration relative to now(). This is likely to
overflow, and would not lead to the expected behaviour.

Fortunately, this is benign as no existing task relied on this sleep
time - the only subclass overrode this default.

Fix by updating the default sleep time.

Change-Id: I13b76d4c395307bcb8eb43255d5eb6d6b2571d3a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2022-02-24 16:01:31.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-02-24 16:08:19.000000000
Message: 
Patch Set 2: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-24 16:14:56.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15778/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/notifiable_task.h:46:16: error: use of undeclared identifier "INT_MAX" [clang-diagnostic-error]
        return INT_MAX;
               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15778/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/notifiable_task.h:46:16:
error: use of undeclared identifier "INT_MAX" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15778/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44156/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44156/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37197/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/executor/notifiable_task.h:46:16:
error: use of undeclared identifier "INT_MAX"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37197/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14626/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16600/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5431/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17865/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17536/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18572/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25939/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5490/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
